Changes to game ui

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#ceffce" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#ceffce" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ceffce" />
     <meta name="description" content="Snaple: A snake game" />
     <title>Snaple</title>
   </head>
